updated f-strings to eliminate the possibility of ties, as ties are not possible in college football.

--- a/module 01 - score_differentiator.ipynb
+++ b/module 01 - score_differentiator.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "bc6ac83c",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "ee303c8f",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "bb4c196d",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "4c1254ef",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "d7a1ff38",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
     "# Print summary\n",
     "print(\"\\n📊 Game Results Summary:\")\n",
     "for opponent, data in score_diffs.items():\n",
-    "    result = \"won by\" if data[\"diff\"] > 0 else \"lost by\" if data[\"diff\"] < 0 else \"tied with\"\n",
+    "    result = \"won by\" if data[\"diff\"] > 0 else \"lost by\"\n",
     "    print(f\"{data['date']}: Illinois {result} {abs(data['diff'])} vs {opponent} \"\n",
     "          f\"({data['illinois']} - {data['opponent']})\")\n"
    ]
